# code-rag

./: .gitignore  README.md  blueprint#1  blueprint#2  blueprint#3  pyproject.toml  requirements.txt
src/: bm25.py  cli.py  code_chunker.py  config.py  context_expander.py  embedding.py  index.py  rerank.py  search.py  tokenizer.py  treesitter_helper.py  utils.py
tests/: test_chunker.py  test_embedding.py  test_end_to_end.py  test_index.py  test_search.py  test_tokenizer.py
